@@ -673,12 +673,14 @@ function [L2,L2I] = subfun4l2( Q, R, Sx, Se, LOG,L1B, X )
       % Apply scalings required for gases.
       if is_gas
         if Q.ABS_SPECIES(ig).LOG_ON
-          L2(end).AVK        = L2(end).AVK .* ( L2(end).VMR * (1./L2(end).VMR') );
+          % Uncomment the line below to scale AVKs to vmr/vmr 
+          %L2(end).AVK        = L2(end).AVK .* ( L2(end).VMR * (1./L2(end).VMR') );
           L2(end).ErrorNoise = L2(end).ErrorNoise .* L2(end).VMR;
           L2(end).ErrorTotal = L2(end).ErrorTotal .* L2(end).VMR;
         else
-          L2(end).AVK = L2(end).AVK .* ...
-                                      ( L2(end).Apriori * (1./L2(end).Apriori') );
+          % Uncomment the lines below to scale AVKs to vmr/vmr 
+          %L2(end).AVK = L2(end).AVK .* ...
+          %                          ( L2(end).Apriori * (1./L2(end).Apriori') );
           L2(end).ErrorNoise = L2(end).ErrorNoise .* L2(end).Apriori;
           L2(end).ErrorTotal = L2(end).ErrorTotal .* L2(end).Apriori;
         end
